<resources>
    <string name="app_name">茶文化知识小测验</string>
    <string name="description">你对中国茶文化了解多少？</string>
    <string name="question_1">1.茶树喜欢什么样的气候？</string>
    <string name="question_1_option_1">干燥</string>
    <string name="question_1_option_2">寒冷</string>
    <string name="question_1_option_3">炎热</string>
    <string name="question_1_right_answer">湿润</string>
    <string name="question_2">2.著名茶品大红袍属于哪一种茶？</string>
    <string name="question_2_option_1">红茶</string>
    <string name="question_2_option_2">黑茶</string>
    <string name="question_2_option_3">白茶</string>
    <string name="question_2_right_answer">乌龙茶</string>
    <string name="question_3">3.按发酵程度分类，哪种茶属于后发酵茶？</string>
    <string name="question_3_option_1">绿茶</string>
    <string name="question_3_option_2">青茶</string>
    <string name="question_3_option_3">红茶</string>
    <string name="question_3_right_answer">黑茶</string>
    <string name="question_4">4.什么时候是喝茶的最佳时间？</string>
    <string name="question_4_option_1">吃早餐时</string>
    <string name="question_4_option_2">吃正餐前</string>
    <string name="question_4_option_3">晚上睡前</string>
    <string name="question_4_right_answer">饭后片刻</string>
    <string name="question_5">5.茶叶冲泡多少次最佳？</string>
    <string name="question_5_option_1">1-2次</string>
    <string name="question_5_option_2">10次左右</string>
    <string name="question_5_option_3">一整天</string>
    <string name="question_5_right_answer">3-4次</string>
    <string name="question_6">6.茶在中国的哪个历史时期兴起？</string>
    <string name="question_6_option_1">商周时期</string>
    <string name="question_6_option_2">秦汉时期</string>
    <string name="question_6_option_3">明清时期</string>
    <string name="question_6_right_answer">隋唐时期</string>
    <string name="question_7"> 7.下列哪些茶属于中国十大名茶？（多选）</string>
    <string name="question_7_option_1">茉莉银毫</string>
    <string name="question_7_right_answer_1">西湖龙井</string>
    <string name="question_7_right_answer_2">碧螺春</string>
    <string name="question_7_right_answer_3">信阳毛尖</string>
    <string name="question_8"> 8.以下哪些著作属于中国四大茶名著？（多选）</string>
    <string name="question_8_option_1">《鉴茶十疏》</string>
    <string name="question_8_right_answer_1">《茶经》</string>
    <string name="question_8_right_answer_2">《大观茶论》</string>
    <string name="question_8_right_answer_3">《品茶要录》</string>
    <string name="question_9">  9.冬季适合饮什么茶？</string>
    <string name="question_9_right_answer">红茶</string>
    <string name="question_10"> 10.哪种茶的发酵程度为0%？</string>
    <string name="question_10_right_answer">绿茶</string>
    <string name="submit">提交答案</string>
    <string name="result_title">你对茶文化的了解程度是：</string>
    <string name="result_worst">一无所知</string>
    <string name="result_not_so_good">略知一二</string>
    <string name="result_not_bad">有所了解</string>
    <string name="result_good">出类拔萃</string>
    <string name="result_excellent">如数家珍</string>
</resources>
